--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ email-validator==1.1.3
 fastapi==0.70.0
 gotrue==0.2.0
 greenlet==1.1.2
+gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.13.7
 httptools==0.2.0
